--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,13 @@
             <version>1.27.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.kohlschutter.junixsocket</groupId>
+            <artifactId>junixsocket-core</artifactId>
+            <version>2.4.0</version>
+            <type>pom</type>
+        </dependency>
+
     </dependencies>
 
 
