--- a/pom.xml
+++ b/pom.xml
@@ -60,11 +60,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>-->
-        <!--<dependency>
+        <dependency>
             <groupId>org.redisson</groupId>
             <artifactId>redisson-spring-boot-starter</artifactId>
             <version>3.10.4</version>
-        </dependency>-->
+        </dependency>
 
         <dependency>
             <groupId>redis.clients</groupId>
