--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,8 @@ spring:
   main:
     allow-bean-definition-overriding: true
   redis:
-    host: 192.168.1.36
+#    host: 192.168.1.36
+    host: 119.91.195.175
     port: 6380
     password: 123456
     maxIdle: 300
