--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,10 +11,11 @@ spring:
   main:
     allow-bean-definition-overriding: true
   redis:
-#    host: 192.168.1.36
+#    host: 124.223.61.143
+#    host: 192.168.1.38
     host: 119.91.195.175
-    port: 6380
-    password: 123456
+    port: 26380
+    password: bAqHqOFJHJ*Z@wIRk6bS
     maxIdle: 300
     maxActive: 600
     maxWait: 1000
